Fix header sizing and spacing

--- a/css/styles/header.css
+++ b/css/styles/header.css
@@ -5,6 +5,7 @@ header {
 body > header {
 	grid-area: header;
 	background-image: var(--mountains-l);
+	background-position: bottom;
 	text-shadow: 0.4em 0.4em 0.4em black;
 }
 
@@ -14,7 +15,7 @@ body.layout-home > header {
 
 body > header > [itemtype="http://schema.org/Person"] {
 	height: 100%;
-	justify-content: center;
+	justify-content: space-between;
 }
 
 
